@@ -18,6 +18,7 @@ import com.tkpm.sms.domain.service.validators.IdentityDomainValidator;
 import com.tkpm.sms.domain.service.validators.StudentDomainValidator;
 import com.tkpm.sms.domain.valueobject.Phone;
 import com.tkpm.sms.infrastructure.mapper.StudentMapperImpl;
+import com.tkpm.sms.infrastructure.persistence.entity.StudentEntity;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
@@ -51,14 +52,7 @@ public class StudentServiceImpl implements StudentService {
 
     @Override
     public PageResponse<Student> findAll(StudentCollectionRequest search) {
-        PageRequest pageRequest = PageRequest.builder()
-                .pageNumber(search.getPage())
-                .pageSize(search.getSize())
-                .sortBy(search.getSortBy())
-                .sortDirection("desc".equalsIgnoreCase(search.getSortDirection())
-                        ? PageRequest.SortDirection.DESC
-                        : PageRequest.SortDirection.ASC)
-                .build();
+        PageRequest pageRequest = PageRequest.from(search);
 
         return studentRepository.findWithFilters(search.getSearch(), search.getFaculty(), pageRequest);
     }
@@ -251,7 +245,7 @@ public class StudentServiceImpl implements StudentService {
     public void saveListStudentFromFile(List<StudentFileDto> studentFileDtos) {
         List<StudentCreateRequestDto> studentCreateRequests = studentFileDtos.stream()
                 .map(studentMapper::toStudentCreateRequest)
-                .collect(Collectors.toList());
+                .toList();
 
         for (StudentCreateRequestDto request : studentCreateRequests) {
             createStudent(request);
